results/SVCOMP/4-shot/log-BufferedReaderReadLine-2024_03_18_08_19_08.txt
import java.io.BufferedReader;
import java.io.StringReader;

public class BufferedReaderReadLine {

  //@ requires br != null;
  //@ ensures \result != null ==> \result.equals(br.readLine());
  public static String check(BufferedReader br) throws Exception {
    String s = br.readLine();
    return s;
  }

  //@ requires arg != null;
  //@ ensures \result > 0;
  public static void main(String arg) {
    String thisLine = null;
    int numLines = 0;

    try {
      BufferedReader br = new BufferedReader(new StringReader(arg));
      String line = check(br);
      while ((thisLine = check(br)) != null) {
        System.out.println(thisLine);
        numLines += 1;
      }
    } catch (Exception e) {
      e.printStackTrace();
      return;
    }
    assert numLines > 0;
  }
}
/home/max/Documents/JMLGPT/tmp/BufferedReaderReadLine.java:14: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result > 0;
               ^
1 error

